fixed overflow in kpi for performance

--- a/src/source/public/map.css
+++ b/src/source/public/map.css
@@ -856,6 +856,16 @@ body {
     position: relative;
 }
 
+.responsive-row-perf {
+    max-height: 500px;
+    overflow-y: auto;
+    margin: 0;
+    padding-bottom: 0;
+    list-style: none;
+    position: relative;
+}
+
+
 .table-row {
     background-color: #ffffff;
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
